# strContruct

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/src/: api.rst  introduction.rst  quick_start.rst
src/: __init__.py  construct_base.py  str_const.py  str_construct_exceptions.py  str_default.py  str_float.py  str_if.py  str_if_then_else.py  str_int.py  str_rebuild.py  str_stop_if.py  str_struct.py  str_switch.py
test/unit/: pytest.ini  test_str_check.py  test_str_const.py  test_str_default.py  test_str_float.py  test_str_if.py  test_str_if_then_else.py  test_str_int.py  test_str_rebuild.py  test_str_stop_if.py  test_str_struct.py  test_str_switch.py
